--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Rahul Ghadage — Software Developer</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
         <h1>Rahul Ghadage</h1>
-        <p class="role">Software Developer — 3+ years</p>
+        <p class="role">Software Developer — 3.3+ Years Experience</p>
         <p class="contact-line">
-          📞 +91 9922396598 | 
+          📞 +91 9922396598 |
           📧 <a href="mailto:rahulghadage.tech@gmail.com">rahulghadage.tech@gmail.com</a> |
-          🌐 <a href="https://www.linkedin.com/in/rahulghadage9431" target="_blank" rel="noopener">LinkedIn</a>
+          🌐 <a href="https://www.linkedin.com/in/rahulghadage9431" target="_blank" rel="noopener">LinkedIn</a> |
+          🐙 <a href="https://github.com/ghadagerahul" target="_blank" rel="noopener">GitHub</a>
         </p>
+
       </div>
       <nav class="nav" id="nav">
         <a href="#about">About</a>
@@ -34,7 +38,10 @@
   <main class="container">
     <section id="about" class="card">
       <h2>Profile Summary</h2>
-      <p>Certified Software Developer with 3+ years of hands-on experience building scalable and high-performance web applications. Proficient in Core Java, Spring, Spring Boot, Hibernate, and RESTful API development. Skilled in full-stack development using JSP/Servlets and Angular CLI. Experienced with Oracle SQL, performance tuning, debugging, and CI/CD automation with Jenkins. Comfortable working in Agile teams using JIRA.</p>
+      <p>Certified Software Developer with 3+ years of hands-on experience building scalable and high-performance web
+        applications. Proficient in Core Java, Spring, Spring Boot, Hibernate, and RESTful API development. Skilled in
+        full-stack development using JSP/Servlets and Angular CLI. Experienced with Oracle SQL, performance tuning,
+        debugging, and CI/CD automation with Jenkins. Comfortable working in Agile teams using JIRA.</p>
     </section>
 
     <section id="experience" class="card">
@@ -43,10 +50,16 @@
         <h3>Software Developer — Crif Solutions</h3>
         <p class="muted">Jul 2022 — Present</p>
         <ul>
-          <li>Developed scalable backend services using Spring Boot, Spring MVC, and integrated with Angular-based frontend.</li>
+          <li>Championed comprehensive business requirements analysis for credit bureau systems, guaranteeing precise
+            alignment of Java software solutions with stakeholder needs and improved credit risk assessment by 1.2%.
+          </li>
+          <li>Orchestrated the creation and deployed Java 8, Java 17 Spring Boot microservices with REST APIs.</li>
           <li>Designed and optimized JSP/Servlets for dynamic web applications.</li>
-          <li>Leveraged GraphQL & Redis for faster and efficient data retrieval.</li>
-          <li>Managed tasks using JIRA and deployed through Jenkins CI/CD pipelines.</li>
+          <li>ntegrated relational databases (Oracle, MySQL) and optimized SQL queries for performance.</li>
+          <li>Implemented authentication & authorization using OAuth2 and JWT.</li>
+          <li>Created CI/CD-ready Docker images and deployed on containerized environments</li>
+          <li>Collaborated with Angular frontend teams to deliver end-to-end features.</li>
+          <li>Followed Agile methodologies and used Jira for project management</li>
         </ul>
       </article>
     </section>
@@ -54,18 +67,36 @@
     <section id="projects" class="card">
       <h2>Key Projects</h2>
       <h3>Inquiry (819 days)</h3>
-      <p>Comprehensive banking application for credit report retrieval (B2C, B2B, commercial). Backend built with Spring Boot, frontend with Angular, and secure data storage with Oracle DB.</p>
+      <ul>
+        <li>Built a comprehensive banking application to retrieve credit reports for B2C, B2B, and commercial clients.
+        </li>
+        <li>Analyzed credit and loan histories to improve accuracy and data access quality.</li>
+        <li>Designed and developed backend services using Spring Boot and Java, ensuring high performance and
+          scalability.</li>
+        <li>Integrated Angular-based frontend modules for seamless user interaction.</li>
+        <li>Used Oracle Database for secure and optimized data storage.</li>
+        <li>Enhanced decision-making for clients through timely and reliable credit insights.</li>
+      </ul>
 
       <h3>Inquiry-Verification (365 days)</h3>
-      <p>Developed RESTful APIs using Spring Boot with JSON/XML support, optimized DB interaction with JPA, used Redis caching, and validated APIs with Postman.</p>
+      <ul>
+        <li>Developed and managed REST APIs using Spring Boot and Java for data exchange in JSON/XML formats.</li>
+        <li>Utilized JPA for efficient database operations, optimizing data retrieval and manipulation.</li>
+        <li>Implemented Redis caching to boost performance and response times.</li>
+        <li>Conducted thorough API testing and validation using Postman to ensure accuracy and reliability.</li>
+        <li>integrated multiple third-party KYC vendors (IDfy, Karza, GlobalRadar) using Rest Template for seamless KYC
+          verification in compliance with Reserve Bank of India (RBI) mandates.</li>
+      </ul>
     </section>
 
     <section id="skills" class="card">
       <h2>Technical Skills</h2>
       <div class="chips">
         <span>Java</span><span>Spring Boot</span><span>Spring MVC</span><span>REST APIs</span>
-        <span>Microservices</span><span>Hibernate</span><span>Redis</span><span>Oracle SQL</span>
-        <span>JPA</span><span>Git</span><span>Jenkins</span><span>Postman</span><span>JIRA</span><span>Angular (basic)</span>
+        <span>Microservices</span><span>Apache-Kafka</span><span>Hibernate</span><span>Redis</span><span>Oracle
+          SQL</span>
+        <span>JPA</span><span>Git</span><span>TFS</span><span>Jenkins</span><span>Docker</span><span>AWS-EC2</span><span>Postman</span><span>JIRA</span><span>Angular
+          (basic)</span>
       </div>
     </section>
 
@@ -73,20 +104,24 @@
       <h2>Education & Certifications</h2>
       <ul>
         <li><strong>B.Tech / B.E. (Computer Science)</strong> — Pune University, 2021</li>
-        <li>12th — Maharashtra Board, 2017</li>
-        <li>10th — Maharashtra Board, 2015</li>
+        <li> <strong>12th (Electronics)</strong> — Maharashtra Board, 2017</li>
+        <li> <strong>10th</strong> — Maharashtra Board, 2015</li>
       </ul>
       <h3>Certifications</h3>
       <ul>
-        <li>POC — OCI to AWS Migration Certificate</li>
+        <li>POC — OCI to AWS Migration</li>
+        <li>OCI Foundations Certified Associate</li>
         <li>HTML, CSS, and JavaScript for Web Developers</li>
+        <li>Java & Spring Boot Internal Trainings</li>
         <li>Software Development Process</li>
       </ul>
     </section>
 
     <section id="contact" class="card">
       <h2>Contact</h2>
-      <p>You can reach me via email <a href="mailto:rahulghadage.tech@gmail.com">rahulghadage.tech@gmail.com</a> or connect on <a href="https://www.linkedin.com/in/rahulghadage9431" target="_blank" rel="noopener">LinkedIn</a>.</p>
+      <p>You can reach me via email <a href="mailto:rahulghadage.tech@gmail.com">rahulghadage.tech@gmail.com</a> or
+        connect on <a href="https://www.linkedin.com/in/rahulghadage9431" target="_blank" rel="noopener">LinkedIn</a>.
+      </p>
     </section>
   </main>
 
@@ -98,4 +133,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
