--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
   <main class="container">
     <section id="about" class="card">
       <h2>Profile Summary</h2>
-      <p>Certified Software Developer with 3+ years of hands-on experience building scalable and high-performance web
-        applications. Proficient in Core Java, Spring, Spring Boot, Hibernate, and RESTful API development. Skilled in
-        full-stack development using JSP/Servlets and Angular CLI. Experienced with Oracle SQL, performance tuning,
-        debugging, and CI/CD automation with Jenkins. Comfortable working in Agile teams using JIRA.</p>
+      <p>Solution-oriented Software Developer with 3.5+ years of experience designing and developing scalable backend
+systems. Expert in Java (8 & 17), Spring Boot, Microservices, REST APIs, and database optimization. Adept at
+integrating APIs, implementing security (OAuth2, JWT), and deploying applications on AWS/Docker. Strong
+problem-solving and communication skills, experienced in Agile environments.</p>
     </section>
 
     <section id="experience" class="card">
       <h2>Work Experience</h2>
       <article class="job">
-        <h3>Software Developer — Crif Solutions</h3>
+        <h3>CRIF High Mark Credit Information Services Pvt. Ltd. | Software Developer</h3>
         <p class="muted">Jul 2022 — Present</p>
         <ul>
           <li>Championed comprehensive business requirements analysis for credit bureau systems, guaranteeing precise
@@ -55,18 +55,20 @@
           </li>
           <li>Orchestrated the creation and deployed Java 8, Java 17 Spring Boot microservices with REST APIs.</li>
           <li>Designed and optimized JSP/Servlets for dynamic web applications.</li>
-          <li>ntegrated relational databases (Oracle, MySQL) and optimized SQL queries for performance.</li>
+          <li>Integrated relational databases (Oracle, MySQL) and Optimized SQL queries in Oracle/MySQL, reducing query execution time by 20%.</li>
           <li>Implemented authentication & authorization using OAuth2 and JWT.</li>
           <li>Created CI/CD-ready Docker images and deployed on containerized environments</li>
           <li>Collaborated with Angular frontend teams to deliver end-to-end features.</li>
+          <li> Migrated and modernized legacy Struts-based applications for credit reporting systems.</li>
           <li>Followed Agile methodologies and used Jira for project management</li>
+          <li> Collaborated with cross-functional teams, conducted code reviews, and mentored junior developers.</li>
         </ul>
       </article>
     </section>
 
     <section id="projects" class="card">
       <h2>Key Projects</h2>
-      <h3>Inquiry (819 days)</h3>
+      <h3>Inquiry Platform | Jul 2023 – Present</h3>
       <ul>
         <li>Built a comprehensive banking application to retrieve credit reports for B2C, B2B, and commercial clients.
         </li>
@@ -75,28 +77,31 @@
           scalability.</li>
         <li>Integrated Angular-based frontend modules for seamless user interaction.</li>
         <li>Used Oracle Database for secure and optimized data storage.</li>
-        <li>Enhanced decision-making for clients through timely and reliable credit insights.</li>
+        <li> Leading development of next-gen inquiry platform for large-scale clients.</li>
       </ul>
 
       <h3>Inquiry-Verification (365 days)</h3>
       <ul>
+        <li> Developed an inquiry system for Credit Bureaus within 6 months, reducing TAT for Credit Report generation by
+30%.</li>
         <li>Developed and managed REST APIs using Spring Boot and Java for data exchange in JSON/XML formats.</li>
         <li>Utilized JPA for efficient database operations, optimizing data retrieval and manipulation.</li>
         <li>Implemented Redis caching to boost performance and response times.</li>
         <li>Conducted thorough API testing and validation using Postman to ensure accuracy and reliability.</li>
         <li>integrated multiple third-party KYC vendors (IDfy, Karza, GlobalRadar) using Rest Template for seamless KYC
           verification in compliance with Reserve Bank of India (RBI) mandates.</li>
+          <li> Performed API validation using Postman, ensuring 100% accuracy in data exchange.</li>
       </ul>
     </section>
 
     <section id="skills" class="card">
       <h2>Technical Skills</h2>
       <div class="chips">
-        <span>Java</span><span>Spring Boot</span><span>Spring MVC</span><span>REST APIs</span>
+        <span>Java 8/17</span><span>Spring Boot</span><span>Spring MVC</span><span>REST APIs</span>
         <span>Microservices</span><span>Apache-Kafka</span><span>Hibernate</span><span>Redis</span><span>Oracle
-          SQL</span>
+          SQL</span> <span>OAuth2</span><span>JWT</span>
         <span>JPA</span><span>Git</span><span>TFS</span><span>Jenkins</span><span>Docker</span><span>AWS-EC2</span><span>Postman</span><span>JIRA</span><span>Angular
-          (basic)</span>
+        </span> <span>Eclipse</span><span>IntelliJ</span><span>VS Code</span>
       </div>
     </section>
 
@@ -111,7 +116,6 @@
       <ul>
         <li>POC — OCI to AWS Migration</li>
         <li>OCI Foundations Certified Associate</li>
-        <li>HTML, CSS, and JavaScript for Web Developers</li>
         <li>Java & Spring Boot Internal Trainings</li>
         <li>Software Development Process</li>
       </ul>
